# tosya_run

./: .gitignore  CMakeLists.txt  LICENSE
assets/: grass.txt  grass_flowers.txt  grass_for_tree.txt  map.txt  map_background.txt  player.txt  portal_half.txt  star.txt  tree.txt  tree_apple.txt  tree_light.txt
src/: main.cpp
